# CodeRSA

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
benchmarks/bigcodebench/gorsa_pipeline/: core.py  runtime.py  settings.py  stages.py
benchmarks/bigcodebench/scripts/: 00_check_gpu.py  02_generate_candidates.py  02_generate_candidates_vllm.py  02_generate_candidates_vllm_2gpu.sh  04_score_baselines.py  04_score_baselines_vllm.py  05_generate_instructions.py  05_generate_instructions_vllm.py  06_compute_l0_vllm.py  07_pairwise_results.py  09_codet_vllm.py  bcb_official_to_gorsa_tasks.py  monitor_bcb_seed42.sh  (+21 more)
docs/: artifacts.md  method.md  task_record_schema.md
examples/: run_bcb_full1140_seed.sh  run_l0_transformers_2gpu_sharded.sh  run_l0_transformers_parallel.sh  run_l0_transformers_resume.sh  run_mbpp_oversample50.sh  run_mbpp_oversample50_h200.sh
scripts/: 01_init_tasks_fast.py  01_init_tasks_staged.py  02_generate_candidates_2gpu.sh  02_generate_candidates_vllm.py  03_evaluate_candidates.py  03_evaluate_candidates_parallel.py  05_generate_instructions_vllm.py  06_compute_l0_vllm.py  07_pairwise_summary_only.py  07_pairwise_writeback.py  07_pairwise_writeback_staged.py  08_report.py  _bootstrap.py  bcb_official_to_gorsa_tasks.py  eval_bcb_local_chunk_pool.py  import_candidates.py  monitor_progress.py  monitor_seed_sweep.py  run_full_vllm_mbpp.sh  run_notebook_repro.sh  run_seed_sweep_43_46.sh  run_stage_logged.sh  run_vllm_os20_temp1_seed.sh  summarize_seed_results.py
src/gorsa_pipeline/: core.py  runtime.py  settings.py  stages.py
(+17 files in other folders)
